Add selection module

--- a/src/Components/editor.css
+++ b/src/Components/editor.css
@@ -1,3 +1,9 @@
 .ql-variable {
     border: dashed 1px;
+    background: lightyellow;
+}
+
+.ql-input {
+    border: dashed 1px;
+    background: lightblue;
 }
