Refacto for the safe of your eyes

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
-  max-Width: 80%;
+  max-width: 80%;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .variableEditorView {
-  width: 600px;
+  max-width: 600px;
   margin: 5em;
 }
 
@@ -14,4 +17,9 @@
 
 .variableView {
   flex: 1;
+}
+
+.viewer {
+  flex: 1;
+  margin: 1em;
 }
